--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "ioredis": "^5.4.1",
     "lucide-react": "^0.400.0",
     "mongodb": "^6.8.0",
     "next": "14.2.4",
