--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@vercel/blob": "^0.23.4",
+    "@vidstack/react": "^1.11.29",
     "axios": "^1.7.2",
     "busboy": "^1.6.0",
     "class-variance-authority": "^0.7.0",
@@ -29,6 +30,7 @@
     "react-dom": "^18",
     "react-h5-audio-player": "^3.9.3",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "redis": "^4.6.15",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
